Added excessive blur compounding